--- a/index.html
+++ b/index.html
@@ -1,7 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Enhancement Plan Review</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            line-height: 1.6;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        section {
+            margin-bottom: 20px;
+            padding: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+    <h1>Enhancement Plan Review</h1>
+
+    <section>
+        <h2>If you fulfill your enhancement plans, what specific skills or knowledge will your work demonstrate?</h2>
+        <p>Here, discuss the specific skills, tools, or techniques that you aim to demonstrate through your enhancement work. Mention how these skills or knowledge areas align with course objectives and reflect your growth in the subject matter.</p>
+    </section>
+
+    <section>
+        <h2>Are there any gaps relative to the course outcomes?</h2>
+        <p>In this section, identify if there are any areas where your current or planned work may not fully address the course outcomes. Consider mentioning any course objectives that you find challenging or less directly aligned with your enhancement plans.</p>
+    </section>
+
+    <section>
+        <h2>Are there remaining limitations or weaknesses you may need to address?</h2>
+        <p>Address any limitations in your current work or plans here. This may include constraints in resources, areas where your skills could be stronger, or aspects of the project that might not be fully achievable within the scope of the course.</p>
+    </section>
+
+    <section>
+        <h2>Are there particular questions or concerns that you would like your instructor to address in their response to this plan?</h2>
+        <p>List any specific questions or concerns you have regarding your enhancement plan. This is an opportunity to request feedback on areas you are unsure about or guidance on particular aspects of your work.</p>
+    </section>
+
 </body>
 </html>
