--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
 
     <section>
         <h2>If you fulfill your enhancement plans, what specific skills or knowledge will your work demonstrate?</h2>
-        <p>Here, discuss the specific skills, tools, or techniques that you aim to demonstrate through your enhancement work. Mention how these skills or knowledge areas align with course objectives and reflect your growth in the subject matter.</p>
+        <p>One limitation is that I’m working within the project’s scope and available tools, so I might not explore every aspect of OAuth2’s advanced features. My experience with OAuth2 is also relatively new, so there’s room for improvement as I gain a deeper understanding. Time constraints may limit my ability to refine certain parts of the integration, meaning I might focus on core functions over advanced customizations.</p>
     </section>
 
     <section>
         <h2>Are there any gaps relative to the course outcomes?</h2>
-        <p>In this section, identify if there are any areas where your current or planned work may not fully address the course outcomes. Consider mentioning any course objectives that you find challenging or less directly aligned with your enhancement plans.</p>
+        <p>One potential gap is that this project is focused mainly on security and authentication. It might not fully address outcomes related to collaborative environments or some broader aspects of communication. I’m mainly focusing on technical development rather than teamwork or audience-specific communication. While I’m confident in my project’s alignment with most course objectives, I acknowledge that some areas might be less emphasized.</p>
     </section>
 
     <section>
         <h2>Are there remaining limitations or weaknesses you may need to address?</h2>
-        <p>Address any limitations in your current work or plans here. This may include constraints in resources, areas where your skills could be stronger, or aspects of the project that might not be fully achievable within the scope of the course.</p>
+        <p>One limitation is that I’m working within the project’s scope and available tools, so I might not explore every aspect of OAuth2’s advanced features. My experience with OAuth2 is also relatively new, so there’s room for improvement as I gain a deeper understanding. Time constraints may limit my ability to refine certain parts of the integration, meaning I might focus on core functions over advanced customizations.</p>
     </section>
 
     <section>
         <h2>Are there particular questions or concerns that you would like your instructor to address in their response to this plan?</h2>
-        <p>List any specific questions or concerns you have regarding your enhancement plan. This is an opportunity to request feedback on areas you are unsure about or guidance on particular aspects of your work.</p>
+        <p>No, I've addressed most issues with the instructor over and email but I will like detailed feedback to make sure I'm on the right path</p>
     </section>
 
 </body>
