--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enhancement Plan Review</title>
+    <title>Your Name - Professional ePortfolio</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -22,28 +23,52 @@
     </style>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <h1>Enhancement Plan Review</h1>
+    <main>
+        <section id="intro">
+            <h1>Welcome to My Professional ePortfolio</h1>
+            <p>Here you will find details about my skills, projects, and achievements in Computer Science. Below is my professional self-assessment and enhancement plan review.</p>
+        </section>
 
-    <section>
-        <h2>If you fulfill your enhancement plans, what specific skills or knowledge will your work demonstrate?</h2>
-        <p>One limitation is that I’m working within the project’s scope and available tools, so I might not explore every aspect of OAuth2’s advanced features. My experience with OAuth2 is also relatively new, so there’s room for improvement as I gain a deeper understanding. Time constraints may limit my ability to refine certain parts of the integration, meaning I might focus on core functions over advanced customizations.</p>
-    </section>
+        <section>
+            <h2>Enhancement Plan Review</h2>
 
-    <section>
-        <h2>Are there any gaps relative to the course outcomes?</h2>
-        <p>One potential gap is that this project is focused mainly on security and authentication. It might not fully address outcomes related to collaborative environments or some broader aspects of communication. I’m mainly focusing on technical development rather than teamwork or audience-specific communication. While I’m confident in my project’s alignment with most course objectives, I acknowledge that some areas might be less emphasized.</p>
-    </section>
+            <section>
+                <h2>If you fulfill your enhancement plans, what specific skills or knowledge will your work demonstrate?</h2>
+                <p>One limitation is that I’m working within the project’s scope and available tools, so I might not explore every aspect of OAuth2’s advanced features. My experience with OAuth2 is also relatively new, so there’s room for improvement as I gain a deeper understanding. Time constraints may limit my ability to refine certain parts of the integration, meaning I might focus on core functions over advanced customizations.</p>
+            </section>
 
-    <section>
-        <h2>Are there remaining limitations or weaknesses you may need to address?</h2>
-        <p>One limitation is that I’m working within the project’s scope and available tools, so I might not explore every aspect of OAuth2’s advanced features. My experience with OAuth2 is also relatively new, so there’s room for improvement as I gain a deeper understanding. Time constraints may limit my ability to refine certain parts of the integration, meaning I might focus on core functions over advanced customizations.</p>
-    </section>
+            <section>
+                <h2>Are there any gaps relative to the course outcomes?</h2>
+                <p>One potential gap is that this project is focused mainly on security and authentication. It might not fully address outcomes related to collaborative environments or some broader aspects of communication. I’m mainly focusing on technical development rather than teamwork or audience-specific communication. While I’m confident in my project’s alignment with most course objectives, I acknowledge that some areas might be less emphasized.</p>
+            </section>
 
-    <section>
-        <h2>Are there particular questions or concerns that you would like your instructor to address in their response to this plan?</h2>
-        <p>No, I've addressed most issues with the instructor over and email but I will like detailed feedback to make sure I'm on the right path</p>
-    </section>
+            <section>
+                <h2>Are there remaining limitations or weaknesses you may need to address?</h2>
+                <p>One limitation is that I’m working within the project’s scope and available tools, so I might not explore every aspect of OAuth2’s advanced features. My experience with OAuth2 is also relatively new, so there’s room for improvement as I gain a deeper understanding. Time constraints may limit my ability to refine certain parts of the integration, meaning I might focus on core functions over advanced customizations.</p>
+            </section>
 
+            <section>
+                <h2>Are there particular questions or concerns that you would like your instructor to address in their response to this plan?</h2>
+                <p>No, I've addressed most issues with the instructor over email, but I would like detailed feedback to make sure I'm on the right path.</p>
+            </section>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Your Name</p>
+    </footer>
+
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
