--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,3 @@
-
 <section class="project">
     <h2>Project: CS-465 - Web Application Enhancements</h2>
     <p>This project showcases several enhancements made to a web application, focusing on various aspects such as testing improvements, Google authentication, pagination, search functionality, and Stripe integration for payment processing. Below, you'll find the original artifact as well as the specific enhancements in separate ZIP files.</p>
@@ -6,20 +5,24 @@
     <h3>Original Artifact</h3>
     <p>This is the original version of the project, without any enhancements.</p>
     <p><a href="https://github.com/ChristCromSchool/ChristCromSchool.github.io/blob/main/CS-465-main%20(1).zip" target="_blank">Download the Original Artifact (main.zip)</a></p>
+    <p><a href="https://github.com/ChristCromSchool/ChristCromSchool.github.io/blob/main/Christian%20Cromer%20Journal%20Code%20review.docx" target="_blank">Read the Journal: Code Review</a></p>
 
     <h3>Enhancements</h3>
     
     <h4>1. Testing Improvements (499-1)</h4>
     <p>This enhancement focuses on improvements to testing, ensuring the application is more robust and reliable. The testing improvements were designed to increase the efficiency and accuracy of the system.</p>
     <p><a href="https://github.com/ChristCromSchool/ChristCromSchool.github.io/blob/main/CS-465-cs-499-1.zip" target="_blank">Download the Testing Improvements (499-1.zip)</a></p>
+    <p><a href="https://github.com/ChristCromSchool/ChristCromSchool.github.io/blob/main/Module%203%20Christian%20Cromer.docx" target="_blank">Read the Journal: Module 3</a></p>
 
     <h4>2. Google Authentication, Pagination, and Search Bar (499-2.1)</h4>
     <p>This update introduces Google authentication for better security, along with pagination and a search bar to enhance the user interface and experience. These features make the application more user-friendly and efficient.</p>
     <p><a href="https://github.com/ChristCromSchool/ChristCromSchool.github.io/blob/main/CS-465-cs-499-2.1.zip" target="_blank">Download the Google Auth, Pagination, and Search Bar Enhancements (499-2.1.zip)</a></p>
+    <p><a href="https://github.com/ChristCromSchool/ChristCromSchool.github.io/blob/main/Module%204.docx" target="_blank">Read the Journal: Module 4</a></p>
 
     <h4>3. Cart and Stripe Integration (499-3)</h4>
     <p>This enhancement focuses on integrating a shopping cart and Stripe for secure payment processing. This is a critical feature for e-commerce applications, allowing users to complete transactions seamlessly.</p>
     <p><a href="https://github.com/ChristCromSchool/ChristCromSchool.github.io/blob/main/CS-465-cs-499-3.zip" target="_blank">Download the Cart and Stripe Integration (499-3.zip)</a></p>
+    <p><a href="https://github.com/ChristCromSchool/ChristCromSchool.github.io/blob/main/Module%205%20database%20.docx" target="_blank">Read the Journal: Module 5 - Database</a></p>
 
     <h3>Code Review Video</h3>
     <p>Here is a video review where I explain the enhancements made to the project and the challenges faced during the process.</p>
