--- a/projects.html
+++ b/projects.html
@@ -73,6 +73,11 @@
         <h3>Code Review Journal</h3>
         
         <iframe src="https://docs.google.com/document/d/e/2PACX-1vTluD-xLjjLCC5agOPbBzN0KagzgGWh3BT9nN6Cqu2m9zdFRc3fN7kPcRnKhnpqwAi6XTlQ5XwixaSM/pub?embedded=true"></iframe>
+
+        <div class="video-container">
+            <h3>Code Review Video</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/BlUN7THXZw0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </section>
 
 </body>
